bk_ida/gccida/g0/rtx_equal_for_cselib_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rtx_equal_for_cselib_p/src/cselib.c:882:25: error: use of undeclared identifier 'machine_mode'
e = cselib_lookup( x, ( machine_mode)*( ( unsigned __int8 *)x + 2), 0); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rtx_equal_for_cselib_p/src/cselib.c:888:27: error: use of undeclared identifier 'machine_mode'
e_0 = cselib_lookup( y, ( machine_mode)*( ( unsigned __int8 *)y + 2), 0); 
                          ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rtx_equal_for_cselib_p/src/obj/cselib.o] Error 1
